Fixed:Should have some gap between Refund status and refund amount on order detail page.

--- a/admin/themes/default/sass/controllers/_order.sass
+++ b/admin/themes/default/sass/controllers/_order.sass
@@ -80,3 +80,6 @@
 
 #noteContent
 	max-height: 200px
+
+.panel-refund-request .refunded_amount
+	margin-top: 2px
